--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       <link href="fonts/Vazir-Regular.ttf">
     <title>فروشگاه ماشین</title>
   </head>
-  <body>
+  <body class="container mx-auto">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
